Ajustes em Ativo e CarteiraAtivo
